src/app/app.component.css
mat-toolbar.mat-toolbar {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 10;
  padding: 0 16px 0 0;
  /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .3);*/
}

.mat-toolbar {
    height:56px;
}
.sidenav{
    margin-top: 56px;
}

mat-sidenav-container {
  background: #eceff1;
}

mat-sidenav-container.app-dark {
  background: #212121;
}
.sidenav-content {
  padding-top:64px;
}
.toolbar-spacer {
  flex: 1 1 auto;
}

#menuSpacer {
  width: 10px;
}

#menuLogo {
  height: 50px;
  vertical-align: middle;
}

#menuTitle {
  text-align: center;
  font-weight: 300;
}

#logo-image-drawer {
  display: block;
  margin: auto;
  height: 150px;
}

/deep/ .mat-tab-header {
  color: white !important;
  border-radius: 5px 5px 0px 0px;
}

/deep/ .mat-tab-link {
  font-size: 16px;
  line-height: 28px !important;
  height: auto !important;
  opacity: 1 !important;
  color: black !important;
}

/deep/ .mat-ink-bar {
  min-width: 120px;
}

.bottom-navigation{
  position: fixed;
  bottom: 0;
  width:100%;
  z-index: 10;
}

/deep/ .bottom-navigation .mat-tab-link{
  padding-top: 4px !important;
  padding-bottom: 2px !important;
  padding-left: 4px !important;
  padding-right: 4px !important;
  color: black !important;
}

/deep/ .bottom-navigation .mat-tab-label-active{
  color: white !important;
}

/deep/ .bottom-navigation .mat-ink-bar {
  visibility: hidden !important;
}

/deep/ .app-dark .mat-drawer-backdrop.mat-drawer-shown{
  background: none;
}
/deep/ .mat-drawer-backdrop.mat-drawer-shown{
  background: none;
}

.nav-button{
  width: 100%;
  text-align: left;
}

@media (max-width: 959px) {
  .sidenav-content{
    margin-bottom:54px;
  }
}

